# VizAn

./: .gitignore  Azzure notebook link.txt  How To install.txt  License.txt  MANIFEST.in  README.rst  VizAn_user_manual.docx  pyproject.toml  setup.py
Jupyter_notebook/: VizAn_1.0.0.ipynb
Python_standalone_file/: VizAn_1_0_0.py  Vizan_1_0_0.py  main.py
docs/: MANUAL.rst
vizan/: __init__.py  errors.py  examples.py  interface.py  tooltip.js  utils.py  visualisation.py
